FIX CONTENT OVERFLOW

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -39,6 +39,12 @@
 	counter-increment: navlink;
 }
 
+/* PAGE CONTENT ============================================================= */
+
+#Content {
+	max-width: 100%;
+}
+
 /* FOOTER =================================================================== */
 
 #Footer {
